add player list
